# faostat-in-duckdb

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  FAOSTATdb.md  PLAN.md  README.html  README.md  faostatdb.toml  pyproject.toml
.github/workflows/: ci.yml
data/: fabio_mapping.ods
docs/: schema.qmd
faostatdb/: __init__.py  __main__.py  area_classification.csv  bench.py  cli.py  compact.py  config.py  download.py  enrich.py  importer.py  metadata.py  paths.py  progress.py  schema.py  validate.py
src/: 01_download_data.R  02_map_to_db.R
tests/: test_bench.py  test_cli.py  test_compact.py  test_config.py  test_download.py  test_enrich.py  test_importer.py  test_metadata.py  test_paths.py  test_progress.py  test_schema.py
